# Pickomino

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PPO_Pickomino.py  QLearning.py  README.md  READMEold.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  pickominio_baseline.py  pickomino_gym_env.py  probe2.py  probe_pickomino.py  pylintrc  pyproject.toml  test.py  test_pickomino.py  training_Q-Learning_MC.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml  test_sb3.yml
DocFiles/: Noch zu erledigen.txt
Pickomino-main/: README.md  __init__.py  qtable_pickomino.pkl  test_pickomino.py
Pickomino-main/pickomino-env/: README.md  probe_pickomino.py
Pickomino-main/pickomino-env/pickomino_env/: __init__.py  pickomino_gym_env.py
Pickomino-main/pickomino-env/pickomino_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: train_example.py  train_example.py.bak.20260317084515
pickomino_env/: .pre-commit-config.yaml  __init__.py  __init__.py.bak.20260317084437  __init__.py.bak.20260317084526  bot_test.py  main.py  pickomino.py  pickomino_gym_env.py
pickomino_env/modules/: __init__.py  __init__.py.bak.20260317084534  action_checker.py  bot.py  checker.py  constants.py  dice.py  game.py  logging_config.py  play.py  player.py  renderer.py  rule_checker.py  table_tiles.py  tiles.py
pickomino_env/src/: __init__.py  bot.py  checker.py  constants.py  dice.py  player.py  table_tiles.py  utils.py
test/: PPO_Pickomino.py  QLearning.py  README.md  main.py  pickominio_baseline.py  probe2.py  probe_pickomino.py  template.py  test_pickomino.py
