[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickomino-env"
version = "1.0.0"
description = "Pickomino (Heckmeck) Gymnasium environment"
readme = ""
requires-python = ">=3.9"
authors = [{ name = "Jarl and Robin" }]
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    # pygame uses deprecated pkg_resources (setuptools issue)
    # See: https://setuptools.pypa.io/en/latest/pkg_resources.html
    "setuptools<81"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pickomino_env*"]

[tool.pydocstyle]
convention = "numpy"

[flake8]
ignore = ["E203", "W503", "E128", "E129"]  # Black wins
max-line-length = 119

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = ["config*.py"]

[tool.setuptools.package-data]
"pickomino_env" = ["py.typed"]
