[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickomino-env"
version = "1.0.0"
description = "Pickomino (Heckmeck) Gymnasium environment"
readme = ""
requires-python = ">=3.8"
authors = [{ name = "Jarl and Robin" }]
dependencies = [
    "gymnasium>=1.2.2",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    # pygame uses deprecated pkg_resources (setuptools issue)
    # See: https://setuptools.pypa.io/en/latest/pkg_resources.html
    "setuptools<81"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pickomino_env*"]

[tool.pydocstyle]
convention = "google"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
omit = ["config*.py"]

[tool.setuptools.package-data]
"pickomino_env" = ["py.typed"]

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
    "tests/",
    "local/"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
enable = [
    "bad-inline-option",
    "deprecated-pragma",
    "file-ignored",
    "use-symbolic-message-instead",
    "useless-suppression",
]
disable = ["consider-using-assignment-expr"] # Assignments in a boolean expression is a bad idea
include-naming-hints = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM101", # Exception message assignment is unnecessary.
    "D203", # Conflicts with D211 (no blank line before class wins)
    "D213", # Conflicts with D212 (first line summary wins)
    "D413", # Allow no blank line after docstring (Google style).
]

[tool.pylint.master]
fail-on = ["I"]
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.broad_try_clause",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.consider_ternary_expression",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.dunder",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.empty_comment",
    "pylint.extensions.for_any_all",
    "pylint.extensions.magic_value",
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint.extensions.while_used"
]

[tool.pylint.variables]
generated-members = ["cv2", "pygame"]
allow-global-unused-variables = false

[tool.pylint.string]
check-quote-consistency = true

[tool.pyright]
include = ["pickomino_env/**"]
exclude = ["test/**", "**/__pycache__"]
strict = []

typeCheckingMode = "strict"
pythonVersion = "3.8"
pythonPlatform = "All"

# This is required as the CI pre-commit does not download the module (numpy, pygame, ...)
#   Therefore, we have to ignore missing imports.
reportMissingImports = "none"

# Cannot infer types from unresolved imports in pre-commit environment
# reportUnknownVariableType = "none"
# reportUnknownMemberType = "none"

# typeshedPath = "typeshed"
# nableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (here: numpy, pygame, ...)
#   Therefore, we have to ignore missing imports.
# reportMissingImports = "none"
# Some modules are missing type stubs, which is an issue when running pyright locally.
# reportMissingTypeStubs = false
# For warning and error, will raise an error when running pyright locally.
# reportInvalidTypeVarUse = "none"

# reportAttributeAccessIssue = "none" # pyright provides false positives
# reportArgumentType = "none"         # pyright provides false positives
